--- a/Speak/app/src/main/res/values/strings.xml
+++ b/Speak/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
             <item>Russian</item>
     </string-array>
     <!--Contexts Sentences Intro-->
-    <string name="intro1">...</string>
-    <string name="intro2">whatever</string>
-    <string name="intro3">..2.</string>
+    <string name="intro1">Hi</string>
+    <string name="intro2">Whats up!</string>
+    <string name="intro3">How are you?</string>
     <!--Contexts Sentences Time-->
     <string name="time1">...</string>
     <string name="time2">whatever</string>
